<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessHints">


    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/_11activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ba" />

    <LinearLayout
        android:layout_width="331dp"
        android:layout_height="67dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:text="@string/textview13"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText13"
            android:layout_width="11dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/a"

            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:targetApi="o"
            tools:text="" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addClick"
            android:text="@string/Add" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="311dp"
        android:layout_height="120dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />


</android.support.constraint.ConstraintLayout>